# fastapi-todolist

./: Dockerfile.local  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: a45b434fbbb7_add_todo_list.py
src/: main.py
src/auth/: __init__.py  utils.py
src/models/: __init__.py  base.py  todo_list.py
src/routers/: private.py  todo_list.py
